tests/rosetta/out/Smalltalk/arithmetic-geometric-mean.out
/workspace/mochi/tests/rosetta/out/Smalltalk/arithmetic-geometric-mean.st:6: parse error, expected integer literal or floating-point literal or decimal literal
