tests/rosetta/out/Smalltalk/arithmetic-geometric-mean.st
" Generated by Mochi compiler v0.10.30 on 2006-01-02T15:04:05Z
"
| abs sqrtApprox guess i agm eps newA newG main |
abs := [:x | ((x < 0)) ifTrue: [
-x.
] .
x. ].
sqrtApprox := [:x | guess := x.
i := 0.
[(i < 20)] whileTrue: [.
guess := (((guess + ((x / guess)))) / 2).
i := (i + 1).
].
.
guess. ].
agm := [:a :g | eps := 1e-14.
[((abs value: (a - g)) > (((abs value: a) * eps)))] whileTrue: [.
newA := (((a + g)) / 2).
newG := sqrtApprox value: (a * g).
a := newA.
g := newG.
].
.
a. ].
main := [ Transcript show: ((agm value: 1 value: (1 / (sqrtApprox value: 2)) asString)) printString; cr. ].
main value.
